bring previous history for product_change done except for tag part

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                     <div class="product-category">
-                        <img class="product-category-image" src="{% static 'img/fasion.png'%}">
+                        <img class="product-category-image" src="{% static 'img/fashion.png'%}">
                         <span class="product-category-text">패션/뷰티</span>
                     </div>
                     <div class="product-sns">
