--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -12,7 +12,86 @@
     <script type="text/javascript" src="{% static 'js/product.js' %}"></script>
     {% block dashboard_js %}
     {% endblock %}
+    <script type="text/javascript">
+        $( "#previous_proudcts_select" ).change(function() {
+            var selected_index = $("#previous_proudcts_select option:selected").index()-1;
+            {% autoescape off %}
+            var seller_products_arr = {{ seller_products }};
+            var seller_products_tag_arr = {{ tags }};
+            {% endautoescape %}
 
+            var selected_product = seller_products_arr[selected_index];
+            var json_selected_product = jQuery.parseJSON(selected_product)["fields"];
+            var selected_tags_arr = seller_products_tag_arr[selected_index];
+            $.ajax({url: "/",
+                success: function(result){
+                /* type check */
+                if(json_selected_product["sns_type"]=='blog'){
+                    $('#id_sns_type_0').prop('checked',true);
+                    color_unchecked_sns_type();
+                    color_checked_sns_type();
+                    check_sns_type_for_display();
+                }else if(json_selected_product["sns_type"]=='facebook'){
+                    $('#id_sns_type_1').prop('checked',true);
+                    color_unchecked_sns_type();
+                    color_checked_sns_type();
+                    check_sns_type_for_display();
+                    if(json_selected_product["sns_additional_info"]=='individual'){
+                        $('#id_sns_additional_info_0').prop('checked',true);
+                        $('#id_sns_additional_info_1').prop('checked',false);
+                        color_unchecked_additional_info();
+                        color_checked_additional_info();
+
+                    }else{
+                        $('#id_sns_additional_info_0').prop('checked',false);
+                        $('#id_sns_additional_info_1').prop('checked',true);
+                        color_unchecked_additional_info();
+                        color_checked_additional_info();
+                    }
+                    set_input_value('#id_follower_friends_num', json_selected_product["follower_friends_num"]);
+                    set_input_value('#id_follower_num', json_selected_product["follower_num"]);
+
+                }else if(json_selected_product["sns_type"]=='instagram'){
+                    $('#id_sns_type_2').prop('checked',true);
+                    color_unchecked_sns_type();
+                    color_checked_sns_type();
+                    check_sns_type_for_display();
+                    if(json_selected_product["sex"]=='male'){
+                        $('#id_sex_0').prop('checked',true);
+                        $('#id_sex_1').prop('checked',false);
+                        color_unchecked_sex();
+                        color_checked_sex();
+
+                    }else{
+                        $('#id_sex_0').prop('checked',false);
+                        $('#id_sex_1').prop('checked',true);
+                        color_unchecked_sex();
+                        color_checked_sex();
+                    }
+                }else if(json_selected_product["sns_type"]=='kakaostory'){
+                    $('#id_sns_type_3').prop('checked',true);
+                    color_unchecked_sns_type();
+                    color_checked_sns_type();
+                    check_sns_type_for_display();
+                }
+                uncheck_tags_for_hover();
+                check_tags_for_hover();
+                for (idx in selected_tags_arr){
+                    $("input[name=tag][value=" + selected_tags_arr[idx] + "]").prop('checked', true);
+                    check_tags_for_hover();
+                }
+                $('#id_sns_url').val(json_selected_product["sns_url"]);
+                $('#id_message_to_buyer').val(json_selected_product["message_to_buyer"]);
+                $('#id_oneline_intro').val(json_selected_product["oneline_intro"]);
+                $($($('iframe').get(0).contentDocument).find('.note-editable p')[0]).html(json_selected_product["description"]);
+                $('#id_price').val(json_selected_product["price"]);
+                $('#id_manuscript_price').val(json_selected_product["manuscript_price"]);
+                $('#id_highrank_price').val(json_selected_product["highrank_price"]);
+                $('#id_working_period').val(json_selected_product["working_period"]);
+                $('#id_message_to_admin').val(json_selected_product["message_to_admin"]);
+            }});
+        });
+    </script>
 {% endblock %}
 
 {% block content %}
@@ -29,11 +108,11 @@
             </div>
         </div>
         <div class="previous_record">
-            <select>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="mercedes">Mercedes</option>
-              <option value="audi">Audi</option>
+            <select id="previous_proudcts_select">
+            <option value=None>이전 기록 불러오기</option>
+                {% for product in oneline_intros %}
+                    <option value={{ product }}>{{ product|safe }}</option>
+                {% endfor %}
             </select>
         </div>
         <form id="product-upload-form" method="POST" enctype="multipart/form-data">{% csrf_token %}
