--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -66,7 +66,7 @@
                     },
                     success: function (data) {
                         if (data['status'] == 'success') {
-                            window.location.href = '/dashboard/purchase/' + data.cart_id;
+                            window.location.href = '/dashboard/purchase/' + data['cart_id'];
                         }
                     }
                 });
